@@ -195,10 +195,19 @@
     
         <h2>Description</h2>
     <div class="Description">
-        <p>This function will install Windows features.  Note that the name of these features can differ between different versions of Windows.<br />
-If on Windows 2008, run <code>servermanagercmd.exe -q</code> for a list.  On Windows 7, run <code>Get-WmiObject -Class Win32_OptionalFeature</code>.</p>
+        <p>This function will install Windows features.  Note that the name of these features can differ between different versions of Windows.</p>
 
-<p>This function should be considered an internal, private function.  It would be best to use one of the feature-specifc Install-WindowsFeature* 
+<p>On Windows 2008, run the following for a list:</p>
+
+<pre><code>servermanagercmd.exe -q  
+</code></pre>
+
+<p>On Windows7 (and maybe Windows Server 2008 R2), run:</p>
+
+<pre><code>Get-WmiObject -Class Win32_OptionalFeature
+</code></pre>
+
+<p>This function should be considered an internal, private function.  It would be best to use one of the feature-specifc <code>Install-WindowsFeature*</code> 
 functions.  These are designed to be Windows-version agnostic.</p>
 
     </div>
@@ -218,7 +227,7 @@ functions.  These are designed to be Windows-version agnostic.</p>
             			<tr valign='top'>
 				<td>Features</td>
 				<td><a href="http://msdn.microsoft.com/en-us/library/system.string.aspx">String[]</a></td>
-				<td>The components to enable/install.  If on Windows 2008, run <code>servermanagercmd.exe -q</code> for a list.  On Windows 7, run <code>Get-WmiObject -Class Win32_OptionalFeature</code>.
+				<td>The components to enable/install.  Feature names are case-sensitive.  If on Windows 2008, run <code>servermanagercmd.exe -q</code> for a list.  On Windows 7/Server 2008 R2, run <code>Get-WmiObject -Class Win32_OptionalFeature</code>.
 </td>
 				<td>true</td>
 				<td>false</td>
@@ -256,6 +265,15 @@ functions.  These are designed to be Windows-version agnostic.</p>
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Install-WindowsFeatures -Features MSMQ-SERVER</code></pre>
+            <p><p>Installs MSMQ .</p>
+</p><p></p><p></p><p></p><p></p>             <h2>EXAMPLE 2</h2>
+            <pre><code>Install-WindowsFeatures -Features IIS-WebServer</code></pre>
+            <p><p>Installs IIS on Windows 7/Server 2008 R2.</p>
+</p><p></p><p></p><p></p><p></p>             <h2>EXAMPLE 3</h2>
+            <pre><code>Install-WindowsFeatures -Features Web-WebServer</code></pre>
+            <p><p>Installs IIS on Windows 2008.</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
